# drogui

./: .gitignore  .gitmodules  .swp  drone_model.slx  out.txt  readme.md  restore_vs_testroger.diff  rotate.asv  rotate.m
FFT/: FFT.h
GPS_SPARKFUN/: Gps_test.ino  data.txt  out.txt  test_serial.py  test_serial.txt
PIC32/: Makefile  main.c  out.hex  venti.code-workspace
app/: README.md
bmp280/: data.txt  data1_1_off_1.csv  data2.csv  data2_16_16_1.csv  data2_16_off_1.csv  out.csv  ser2csv.py
bmx055/: bmx055.ino
control_test/: 13-01-2021 21-47-21_control.txt  13-01-2021 21-47-21_imu.txt  15-01-2021 23-45-55_control.txt  15-01-2021 23-45-55_imu.txt  Roll_40.xlsx  TestI2C.xlsx  Untitled.m
coppelia/: droguiRealVis.ttt  droguiVis.ttt  drogui_imu.ttt  magnetometer.ttt  quaternion.ttt  remoteApiCommandServerExample.ttt
edit_test/: test  test2
gps_test/: 04-01-2021 15-44-13_gps.txt  04-01-2021 15-44-13_imu.txt  04-01-2021 15-51-34_gps.txt  04-01-2021 15-51-34_imu.txt  04-01-2021 15-56-09_gps.txt  04-01-2021 15-56-09_imu.txt  04-01-2021 18-12-28_gps.txt  04-01-2021 18-12-28_imu.txt  04-01-2021 18-39-05_gps.txt  04-01-2021 18-39-05_imu.txt  04-01-2021 21-37-11_imu.txt  04-01-2021 21-39-16_imu.txt  04-01-2021 21-51-08_imu.txt  04-01-2021 21-55-14_imu.txt  (+124 more)
imu/coppelia/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  complexCommandTest.cpp  readme.txt  remoteApiSharedLib-32.vcxproj  remoteApiSharedLib-64.vcxproj  remoteApiSharedLib.pro  simpleTest  simpleTest.cpp
imu/coppelia/include/: simConst.h
imu/coppelia/remoteApi/: extApiPlatform.c
(+2925 files in other folders)
